--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
-<div class="navigation-wrapper">
+<!-- <div class="navigation-wrapper">
 	<div class="site-name">
 		<a href="{{ site.url }}">{{ site.title }}</a>
-	</div><!-- /.site-name -->
+	</div> -->
   {% capture url %}{{ page.url | remove:'index.html' }}{% endcapture %}
 	<div class="top-navigation">
 		<nav role="navigation" itemscope itemtype="http://schema.org/SiteNavigationElement">
