--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <!-- Lastly modified by Hanlin CAI in 2023/04/26 -->
 
 <meta charset="utf-8">
-<title>{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}</title>
+<!-- <title>{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}</title> -->
 {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
 {% if page.tags %}<meta name="keywords" content="{{ page.tags | join: ', ' }}">{% endif %}
 {% if site.owner.twitter %}<!-- Twitter Card and Open Graph meta -->
