--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,7 +58,7 @@
 </div><!-- /#main -->
 
 
-<div class="footer-wrap">
+<!-- <div class="footer-wrap">
   {% if site.related_posts.size %}<div class="related-articles">
   <h4>You might also enjoy <small class="pull-right">(<a href="{{ site.url }}/articles">View all articles</a>)</small></h4>
     <ul>
@@ -75,11 +75,11 @@
     {% endfor %}
     </ul>
     <hr />
-  </div><!-- /.related-articles -->{% endif %}
+  </div>{% endif %}
   <footer>
     {% include footer.html %}
   </footer>
-</div><!-- /.footer-wrap -->
+</div> -->
 
 {% include scripts.html %}	        
 
